# logbot

./: .env  .gitignore  README.md  pyproject.toml  test.py
docker/: .env  entrypoint.sh  storage.Dockerfile
docker/dev/: Dockerfile  docker-compose.yml
src/botgram/: .gitignore  bot.py  common.py  settings.py
src/logbot/: __init__.py  bot.py  bot_utils.py  common.py  filters.py  handler.py  logging.py  models.py  settings.py  tools.py
